Fix wrapping on VCLTree

--- a/assets/css/06_txtree.css
+++ b/assets/css/06_txtree.css
@@ -35,6 +35,7 @@ div.txtree {
 
     & tx-val {
       overflow-wrap: break-word;
+      word-break: break-all;
     }
 
     & tx-key {
